Log user out when leaving closing the browser/tab, Fix bug with user log in not returning user, Add wrap to avatar container

--- a/jabber/src/jabber/chatbox/chatbox.css
+++ b/jabber/src/jabber/chatbox/chatbox.css
@@ -122,6 +122,7 @@
 
 .connected-users {
     display: flex;
+    flex-wrap: wrap;
 }
 
 .connected-users .user-info {
